data/forge_javadoc/1.8.9/processed/net_minecraft_client_resources_ResourcePackRepository.md
# ResourcePackRepository

**Inheritance:** java.lang.Object → net.minecraft.client.resources.ResourcePackRepository

## Class signature

```java
public class ResourcePackRepository extends java.lang.Object
```

## Constructors

- `ResourcePackRepository(java.io.File dirResourcepacksIn, java.io.File dirServerResourcepacksIn, IResourcePack rprDefaultResourcePackIn, IMetadataSerializer rprMetadataSerializerIn, GameSettings settings)`

## Methods

- `void clearResourcePack()`
- `<any> downloadResourcePack(java.lang.String url, java.lang.String hash)`
- `java.io.File getDirResourcepacks()`
- `java.util.List<ResourcePackRepository.Entry> getRepositoryEntries()`
- `java.util.List<ResourcePackRepository.Entry> getRepositoryEntriesAll()`
- `IResourcePack getResourcePackInstance()` — Getter for the IResourcePack instance associated with this ResourcePackRepository
- `void setRepositories(java.util.List<ResourcePackRepository.Entry> p_148527_1_)`
- `<any> setResourcePackInstance(java.io.File p_177319_1_)`
- `void updateRepositoryEntriesAll()`

## Fields

- `IResourcePack rprDefaultResourcePack`
- `IMetadataSerializer rprMetadataSerializer`